Converting from Map Editor to Map Inspector
Moving away from a separate window/editor for the map controls, moving
it to be a part of the inspector. Painting the textures on the tiles is
also implemented.

--- a/Code/Project/TeykeToolkit/Assembly-CSharp-Editor-vs.csproj
+++ b/Code/Project/TeykeToolkit/Assembly-CSharp-Editor-vs.csproj
@@ -47,6 +47,8 @@
      <Compile Include="Assets\Editor\ExtensionMethods.cs" />
      <Compile Include="Assets\Editor\Map\MapCreationDialog.cs" />
      <Compile Include="Assets\Editor\Map\MapEditor.cs" />
+     <Compile Include="Assets\Editor\Map\MapInspector.cs" />
+     <Compile Include="Assets\Editor\Map\TileInspector.cs" />
  <Reference Include="UnityEditor.Graphs">
  <HintPath>C:\Program Files (x86)\Unity\Editor\Data\Managed\UnityEditor.Graphs.dll</HintPath>
  </Reference>
