--- a/Code/Project/TeykeToolkit/Assembly-CSharp-Editor-vs.csproj
+++ b/Code/Project/TeykeToolkit/Assembly-CSharp-Editor-vs.csproj
@@ -46,9 +46,11 @@
   <ItemGroup>
      <Compile Include="Assets\Editor\ExtensionMethods.cs" />
      <Compile Include="Assets\Editor\Map\MapCreationDialog.cs" />
-     <Compile Include="Assets\Editor\Map\MapEditor.cs" />
      <Compile Include="Assets\Editor\Map\MapInspector.cs" />
      <Compile Include="Assets\Editor\Map\TileInspector.cs" />
+     <Compile Include="Assets\Editor\Pathing\PathingNode.cs" />
+     <Compile Include="Assets\Editor\Pathing\PathingRegion.cs" />
+     <Compile Include="Assets\Editor\Pathing\PathingWindow.cs" />
  <Reference Include="UnityEditor.Graphs">
  <HintPath>C:\Program Files (x86)\Unity\Editor\Data\Managed\UnityEditor.Graphs.dll</HintPath>
  </Reference>
