--- a/Code/Project/TeykeToolkit/Assembly-CSharp-Editor.csproj
+++ b/Code/Project/TeykeToolkit/Assembly-CSharp-Editor.csproj
@@ -48,6 +48,7 @@
      <Compile Include="Assets\Editor\Map\MapCreationDialog.cs" />
      <Compile Include="Assets\Editor\Map\MapInspector.cs" />
      <Compile Include="Assets\Editor\Map\TileInspector.cs" />
+     <Compile Include="Assets\Editor\Pathing\GoalBasedPathInspector.cs" />
      <Compile Include="Assets\Editor\Pathing\PathingNode.cs" />
      <Compile Include="Assets\Editor\Pathing\PathingRegion.cs" />
      <Compile Include="Assets\Editor\Pathing\PathingWindow.cs" />
@@ -73,8 +74,6 @@
   <ItemGroup>
     <ProjectReference Include="Assembly-CSharp.csproj">
       <Project>{C844E28C-E3FD-7949-A9F2-D70282199F2C}</Project>      <Name>Assembly-CSharp</Name>    </ProjectReference>
-    <ProjectReference Include="Assembly-UnityScript.unityproj">
-      <Project>{43507152-4514-8574-7F2B-9EAE2DFA6F69}</Project>      <Name>Assembly-UnityScript</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
