--- a/Code/Project/TeykeToolkit/Assembly-CSharp.csproj
+++ b/Code/Project/TeykeToolkit/Assembly-CSharp.csproj
@@ -44,7 +44,9 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\GoalBasedPath.cs" />
      <Compile Include="Assets\Scripts\Map.cs" />
+     <Compile Include="Assets\Scripts\TargetedMovementPathing.cs" />
      <Compile Include="Assets\Scripts\Tile.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
