--- a/Code/Project/TeykeToolkit/Assembly-CSharp-Editor-vs.csproj
+++ b/Code/Project/TeykeToolkit/Assembly-CSharp-Editor-vs.csproj
@@ -48,6 +48,7 @@
      <Compile Include="Assets\Editor\Map\MapCreationDialog.cs" />
      <Compile Include="Assets\Editor\Map\MapInspector.cs" />
      <Compile Include="Assets\Editor\Map\TileInspector.cs" />
+     <Compile Include="Assets\Editor\Pathing\AStarPathfinderInspector.cs" />
      <Compile Include="Assets\Editor\Pathing\GoalBasedPathInspector.cs" />
      <Compile Include="Assets\Editor\Pathing\PathingNode.cs" />
      <Compile Include="Assets\Editor\Pathing\PathingRegion.cs" />
