Messenger-Based Event System Implemented
Implemented a skeleton for the finished event system. Objects simply
register with a static 'Messenger' class for events the fire and listen
to. Defining often-used base events will come next.

--- a/Code/Project/TeykeToolkit/Assembly-CSharp-vs.csproj
+++ b/Code/Project/TeykeToolkit/Assembly-CSharp-vs.csproj
@@ -44,6 +44,8 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\EventSystem\Messenger.cs" />
+     <Compile Include="Assets\Scripts\EventSystem\TeykeEvent.cs" />
      <Compile Include="Assets\Scripts\GoalBasedPath.cs" />
      <Compile Include="Assets\Scripts\GoalPathFollower.cs" />
      <Compile Include="Assets\Scripts\Map.cs" />
@@ -51,6 +53,8 @@
      <Compile Include="Assets\Scripts\Pathing\PotentialField.cs" />
      <Compile Include="Assets\Scripts\Pathing\PotentialFieldGenerator.cs" />
      <Compile Include="Assets\Scripts\Tile.cs" />
+     <Compile Include="Assets\regionScript.cs" />
+     <Compile Include="Assets\sizeRandomizer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
