--- a/Code/Project/TeykeToolkit/Assembly-CSharp.csproj
+++ b/Code/Project/TeykeToolkit/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
      <Compile Include="Assets\Scripts\GameUnits\GameEntities.cs" />
      <Compile Include="Assets\Scripts\GameUnits\GameStructure.cs" />
      <Compile Include="Assets\Scripts\GameUnits\GameUnit.cs" />
+     <Compile Include="Assets\Scripts\GameUnits\SelectionManager.cs" />
      <Compile Include="Assets\Scripts\GameUnits\TechTree.cs" />
      <Compile Include="Assets\Scripts\GameUnits\TestUpgrader.cs" />
      <Compile Include="Assets\Scripts\GoalBasedPath.cs" />
