--- a/Code/Project/TeykeToolkit/Assembly-CSharp-vs.csproj
+++ b/Code/Project/TeykeToolkit/Assembly-CSharp-vs.csproj
@@ -39,37 +39,35 @@
 	<Reference Include="System.Core" />
 	<Reference Include="System.Xml.Linq" />
 	<Reference Include="UnityEngine">
-	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+	  <HintPath>D:/Programs/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEditor">
-	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+	  <HintPath>D:/Programs/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scratchpad\gridmap.cs" />
-     <Compile Include="Assets\Scratchpad\gridmapcell.cs" />
-     <Compile Include="Assets\Scripts\Combat\Attack.cs" />
-     <Compile Include="Assets\Scripts\Combat\Projectile.cs" />
      <Compile Include="Assets\Scripts\Creep.cs" />
      <Compile Include="Assets\Scripts\CreepManager.cs" />
      <Compile Include="Assets\Scripts\EventSystem\Messenger.cs" />
-     <Compile Include="Assets\Scripts\EventSystem\TeykeEvent.cs" />
+     <Compile Include="Assets\Scripts\GameUnits\Combat\Attack.cs" />
+     <Compile Include="Assets\Scripts\GameUnits\Combat\Projectile.cs" />
      <Compile Include="Assets\Scripts\GameUnits\GameEntities.cs" />
      <Compile Include="Assets\Scripts\GameUnits\GameStructure.cs" />
      <Compile Include="Assets\Scripts\GameUnits\GameUnit.cs" />
+     <Compile Include="Assets\Scripts\GameUnits\Pathing\AStarPathfinder.cs" />
+     <Compile Include="Assets\Scripts\GameUnits\Pathing\PotentialField.cs" />
+     <Compile Include="Assets\Scripts\GameUnits\Pathing\PotentialFieldGenerator.cs" />
      <Compile Include="Assets\Scripts\GameUnits\SelectionManager.cs" />
      <Compile Include="Assets\Scripts\GameUnits\TechTree.cs" />
      <Compile Include="Assets\Scripts\GameUnits\TestUpgrader.cs" />
      <Compile Include="Assets\Scripts\GoalBasedPath.cs" />
      <Compile Include="Assets\Scripts\GoalPathFollower.cs" />
+     <Compile Include="Assets\Scripts\Gridmap.cs" />
+     <Compile Include="Assets\Scripts\GridmapCell.cs" />
      <Compile Include="Assets\Scripts\Map.cs" />
-     <Compile Include="Assets\Scripts\Pathing\AStarPathfinder.cs" />
-     <Compile Include="Assets\Scripts\Pathing\PotentialField.cs" />
-     <Compile Include="Assets\Scripts\Pathing\PotentialFieldGenerator.cs" />
      <Compile Include="Assets\Scripts\Tile.cs" />
      <Compile Include="Assets\Scripts\Towers\Tower_1.cs" />
-     <Compile Include="Assets\regionScript.cs" />
-     <Compile Include="Assets\sizeRandomizer.cs" />
+     <Compile Include="Assets\Teyke Demos\Dungeon Crawler\playerController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
